--- a/UFATECH_1_1/UFATECH_1_1/UFATECH_1_1.vcxproj
+++ b/UFATECH_1_1/UFATECH_1_1/UFATECH_1_1.vcxproj
@@ -147,11 +147,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CourseSearch.h" />
+    <ClInclude Include="FacultySearch.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Student.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="YearAfterSearch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CourseSearch.cpp" />
+    <ClCompile Include="FacultySearch.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -160,6 +165,7 @@
     </ClCompile>
     <ClCompile Include="Student.cpp" />
     <ClCompile Include="UFATECH_1_1.cpp" />
+    <ClCompile Include="YearAfterSearch.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
